fix overflow-x

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ body{
     align-items: center;
     background-color: rgb(11, 0, 41);
     color: white;   
+    overflow-x: hidden;
 }
 
 .scores{
